Pagination causes big spacing issues

--- a/app/assets/stylesheets/newsfeed.css
+++ b/app/assets/stylesheets/newsfeed.css
@@ -33,6 +33,6 @@
   padding-left: 15px;
   margin: 1px 1px 1px 1px;
   margin-bottom: 23px;
-  box-shadow: 1px 1px 9px #ae61c9;
+  box-shadow: 2px 2px 9px #ae61c9;
   background-color: white;
 }
